--- a/playground.ipynb
+++ b/playground.ipynb
@@ -161,12 +161,12 @@
    "outputs": [],
    "source": [
     "# challenge 2\n",
-    "x = ___\n",
+    "x = 10\n",
     "y = 3\n",
     "\n",
-    "command = ___(input(\"Masukkan command: \"))\n",
+    "command = int(input(\"Masukkan command: \"))\n",
     "if command == 1:\n",
-    "    print(f\"{x} pangkat {___} = {x ** y}\") # output seharusnya 1000\n",
+    "    print(f\"{x} pangkat {3} = {x ** y}\") # output seharusnya 1000\n",
     "else:\n",
     "    print(\"Command tidak dikenali\")\n"
    ]
@@ -226,8 +226,8 @@
    "source": [
     "# challenge 3\n",
     "# modifikasi value x dan y\n",
-    "x = 120,5\n",
-    "y = 120,5\n",
+    "x = 10\n",
+    "y = 231\n",
     "print(f\"x + y = {x + y}\") # x + y should be 241"
    ]
   },
@@ -377,7 +377,7 @@
    "source": [
     "# challenge 5\n",
     "ls = [\"John\", 25, True, 3.14, \"apple\"]\n",
-    "ls.___(__, ___)\n",
+    "ls.insert(2, \"orange\")\n",
     "print(ls) # Output: ['John', 25, 'orange', True, 3.14, 'apple']"
    ]
   },
@@ -446,7 +446,7 @@
    "source": [
     "# challenge 6\n",
     "# ubah value dari key 'name' menjadi 'Samuel'\n",
-    "employee['name'] = ___\n",
+    "employee['name'] = 'samuel'\n",
     "print(employee['name'])"
    ]
   },
@@ -458,7 +458,7 @@
    "source": [
     "# challenge 7\n",
     "# ubah value dari key 'age' menjadi 20 berdasatkan input user\n",
-    "employee['age'] = ___\n",
+    "employee['age'] = int(input('masukkan umur'))\n",
     "print(employee['age'])"
    ]
   }
