Mengumpulkan Playground Modul 3

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -39,9 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Halo, Nadya\n"
+     ]
+    }
+   ],
    "source": [
     "nama = input(\"Masukkan nama: \")\n",
     "print(\"Halo, \" + nama)"
@@ -49,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 123\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 1\n",
     "# masukkan id pada input sesuai dengan tipe data yang sudah ditentukan\n",
@@ -69,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -129,17 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Too high\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 10\n",
     "user = int(input(\"Enter a number: \"))\n",
@@ -156,9 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 pangkat 3 = 1000\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 2\n",
     "x = 10\n",
@@ -181,27 +197,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "harga total adalah 26500.0 ribu rupiah\n"
+      "harga total adalah 26500.0 ribu rupiah\n",
+      "harga minumannya adalah 5000\n"
      ]
     }
    ],
    "source": [
     "mie_iblis = 13.5\n",
     "udang_keju = 13\n",
+    "harga_minum = 5000\n",
     "\n",
-    "print(\"harga total adalah {} ribu rupiah\".format((mie_iblis + udang_keju)*1000))"
+    "print(\"harga total adalah {} ribu rupiah\".format((mie_iblis + udang_keju)*1000))\n",
+    "\n",
+    "print(f\"harga minumannya adalah {harga_minum}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -220,9 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x + y = 241\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 3\n",
     "# modifikasi value x dan y\n",
@@ -241,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +366,11 @@
       "1\n",
       "['dua', 3.0]\n",
       "['a', 'b', 'c']\n",
-      "b\n"
+      "b\n",
+      "depok\n",
+      "['fiya', 'muti']\n",
+      "mira\n",
+      "novita\n"
      ]
     }
    ],
@@ -347,12 +379,19 @@
     "print(ini_list[0])\n",
     "print(ini_list[1:3])\n",
     "print(ini_list[-1])\n",
-    "print(ini_list[5][1])"
+    "print(ini_list[5][1])\n",
+    "\n",
+    "\n",
+    "list_teman = [\"yalep\", \"depok\", \"eli\", \"mahar\", \"fiya\", \"muti\", \"zarla\", \"nala\", \"novita\", \"mira\", \"raisa\", \"julie\"]\n",
+    "print(list_teman[1])\n",
+    "print(list_teman[4:6])\n",
+    "print(list_teman[-3])\n",
+    "print(list_teman[8])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -366,14 +405,22 @@
    "source": [
     "# challenge 4\n",
     "list2 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "print(list2[__:__:__]) # output seharusnya [9, 7, 5, 3, 1]"
+    "print(list2[8::-2]) # output seharusnya [9, 7, 5, 3, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['John', 25, 'orange', True, 3.14, 'apple']\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 5\n",
     "ls = [\"John\", 25, True, 3.14, \"apple\"]\n",
@@ -391,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,9 +487,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "samuel\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 6\n",
     "# ubah value dari key 'name' menjadi 'Samuel'\n",
@@ -452,13 +507,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 7\n",
     "# ubah value dari key 'age' menjadi 20 berdasatkan input user\n",
-    "employee['age'] = int(input('masukkan umur'))\n",
+    "employee['age'] = '20'\n",
     "print(employee['age'])"
    ]
   }
@@ -479,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
